--- a/Sidebar-For-Tree.html
+++ b/Sidebar-For-Tree.html
@@ -44,8 +44,8 @@ main {
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="Exetensions/tree.html">Tree</a>
+        <a href="../index.html">Home</a>
+        <a href=".html.html">Html</a>
     </nav>
     <main>
         <!-- Content in the main section can be added here if needed -->
