--- a/Sidebar-For-Tree.html
+++ b/Sidebar-For-Tree.html
@@ -45,7 +45,8 @@ main {
 <body>
     <nav>
         <a href="../index.html">Home</a>
-        <a href=".html.html">Html</a>
+        <a href="html.html">Html</a>
+        <a href="js.html">Js</a>
     </nav>
     <main>
         <!-- Content in the main section can be added here if needed -->
