--- a/Sidebar.html
+++ b/Sidebar.html
@@ -45,6 +45,7 @@ main {
 <body>
     <nav>
         <a href="index.html">Home</a>
+        <a href="https://github.com/HttpAnimation/WSI">Github</a>
         <a href="Exetensions/tree.html">Tree</a>
     </nav>
     <main>
