--- a/Sidebar-For-Exetension.html
+++ b/Sidebar-For-Exetension.html
@@ -45,6 +45,7 @@ main {
 <body>
     <nav>
         <a href="../index.html">Home</a>
+        <a href="Donations.html">Donations</a>
         <a href="tree.html">Tree</a>
     </nav>
     <main>
