--- a/Sidebar.html
+++ b/Sidebar.html
@@ -46,6 +46,7 @@ main {
     <nav>
         <a href="index.html">Home</a>
         <a href="https://github.com/HttpAnimation/WSI">Github</a>
+        <a href="Exetensions/Donations.html">Donations</a>
         <a href="Exetensions/tree.html">Tree</a>
     </nav>
     <main>
