--- a/404.html
+++ b/404.html
@@ -12,20 +12,15 @@
     </header>
 
     <main>
-        <section id="about">
-            <h2>About</h2>
-            <p>WSI is a website to show how file exetenstion work and how to use them. This webiste is a free forever and will always be free for personal use.</p>
-        </section>
-
-        <section id="fileTypeHere">
-            <h2>.fileType</h2>
-            <p>This is the line that gets used to talk about what the file type does.</p>
+        <section id="404">
+            <h2>Error | 404</h2>
+            <p>You are seeing this page becuase you have entered a page that does not exist in the data base if you are here by going to to a root URL pls open a ticket on the Github site till then click the home button and you can countine to use the site if the button does not work make sure index.html is in you're tree on the website as you might have deleted it.</p>
         </section>
     </main>
 
     <script>
         // Use fetch to load the content of sidebar.html
-        fetch('../Sidebar-For-Exetension.html')
+        fetch('../Sidebar.html')
             .then(response => response.text())
             .then(html => {
                 // Insert the loaded content into the document
