--- a/Exetensions/Credits.html
+++ b/Exetensions/Credits.html
@@ -17,9 +17,9 @@
             <p>WSI is a website to show how file exetenstion work and how to use them. This webiste is a free forever and will always be free for personal use.</p>
         </section>
 
-        <section id="fileTypeHere">
-            <h2>.fileType</h2>
-            <p>This is the line that gets used to talk about what the file type does.</p>
+        <section id="credits">
+            <h2>Credits</h2>
+            <p>HttpAnimations</p>
         </section>
     </main>
 
