--- a/Exetensions/Donations.html
+++ b/Exetensions/Donations.html
@@ -12,12 +12,17 @@
     </header>
 
     <main>
-        <section id="section1">
+        <section id="about">
             <h2>About</h2>
             <p>WSI is a website to show how file exetenstion work and how to use them. This webiste is a free forever and will always be free for personal use.</p>
         </section>
 
-        <section id="srction2">
+        <section id="about-donations">
+            <h2>About donations</h2>
+            <p>Donating allows me to work on this site more and more you will also be added to the website under Credits if you do donate and want to be added onto the site message httpanimations on Discord.</p>
+        </section>
+
+        <section id="donations">
             <h2>Donations</h2>
             <p>XMR: <br>4Ah4JgyvAXtJ2a5wgGUS3bBeXPMciJo62NMwZ7cY11xF3ok9tfwvhoF2hE8hiSmfdf1yGDpFD8NrcVEk5iFsonWcBCcRdAh</p>
             <p>Cashapp: <br>$HttpAnimations</p>
@@ -28,7 +33,7 @@
 
     <script>
         // Use fetch to load the content of sidebar.html
-        fetch('../Sidebar.html')
+        fetch('../Sidebar-For-Exetension.html')
             .then(response => response.text())
             .then(html => {
                 // Insert the loaded content into the document
