--- a/Exetensions/js.html
+++ b/Exetensions/js.html
@@ -12,12 +12,12 @@
     </header>
 
     <main>
-        <section id="section1">
+        <section id="about">
             <h2>About</h2>
             <p>WSI is a website to show how file exetenstion work and how to use them. This webiste is a free forever and will always be free for personal use.</p>
         </section>
 
-        <section id="section1">
+        <section id="js">
             <h2>.js</h2>
             <p>The .js file type is a kind of scripting languge mainly made for html/Websites or NodeJS it is used for taking actions from a html script and getting that data then sending new data to it this can not be used for running files as it does not have system permissions.</p>
         </section>
