--- a/Runners/index.html
+++ b/Runners/index.html
@@ -1,1 +1,38 @@
-this file is here to see if any changes need to made for a dir
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WSI</title>
+</head>
+<body>
+    <section id="error">
+        <h2>Error | 302</h2>
+        <p>This page is here for testing out runners to make sure they are not trying to locate and stream the worng files if you ever see this page when going to a root-url upload a ticket to the github page https://github.com/HttpAnimation/WSI so I can get to fixing it</p>
+    </section>
+
+    <section id="test">
+        <h2>Other</h2>
+        <p>If this page shows up ender this text then you can for now just hit the home button under it and see if that works</p>
+        <a href="../index.html">Home button</a>    
+        <iframe src="../DoesThisWork.html" width="600" height="199" frameborder="0" allowfullscreen></iframe>    
+    </section>
+
+    <section id="ticketer">
+        <h2>Ticket</h2>
+        <p>Use the text below as the template for you're ticket</p>
+        <br>
+        <p>Error page 302</p>
+        <p>The url am on: Enter the URL of the page you are on right now should look something like http://127.0.0.1:3000</p>
+        <p>Am using the runner: Enter witch runner you are using here</p>
+        <p>The home does work: yes/no</p>
+        <p>More:</p>
+        <br>
+    </section>
+
+    <section id="ticketer+">
+        <h2>More</h2>
+        <p>Under the part that says more add more info like what you you're doing at the time and if you edited anything in you're runner and if you used a non-default opention such as -p or -h when running it</p>
+    </section>
+    </body>
+</html>
