--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </header>
 
     <main>
-        <section id="section1">
+        <section id="about">
             <h2>About</h2>
             <p>WSI is a website to show how file exetenstion work and how to use them. This webiste is a free forever and will always be free for personal use.</p>
         </section>
 
-        <section id="section2">
+        <section id="gh-pages">
             <h2>Gh-Pages</h2>
             <p>If you are using Gh-Pages or this URL https://httpanimation.github.io/ thne you will get issues on the site as the github pages does not allow / starting dir's to work it is better to use a runner on a old rando pc if so head here over to the github page witch can be found on the side bar of the main page /index.html</p>
         </section>
