--- a/Exetensions/html.html
+++ b/Exetensions/html.html
@@ -12,12 +12,12 @@
     </header>
 
     <main>
-        <section id="section1">
+        <section id="about">
             <h2>About</h2>
             <p>WSI is a website to show how file exetenstion work and how to use them. This webiste is a free forever and will always be free for personal use.</p>
         </section>
 
-        <section id="section1">
+        <section id=".html">
             <h2>.html</h2>
             <p>The html file type is for Websites they are used to display contant on the site for other coding languges such as css and js they can also hold other simple data such as text.</p>
         </section>
