--- a/Exetensions/tree.html
+++ b/Exetensions/tree.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-        <section id="section1">
+        <section id="about">
             <h2>About</h2>
             <p>WSI is a website to show how file exetenstion work and how to use them. This webiste is a free forever and will always be free for personal use.</p>
         </section>
